Adding simple kafka service to log created notes

--- a/Notes.Api/appsettings.json
+++ b/Notes.Api/appsettings.json
@@ -7,7 +7,11 @@
   },
   "ConnectionStrings": {
     "Default": ""
-  } ,
+  },
+  "Kafka": {
+    "BootstrapServers": "kafka:9092"
+  },
+
   "AllowedHosts": "*"
 }
   
