--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,32 @@ services:
     networks:
       - notes_network
 
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.6.1
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+    ports:
+      - "2181:2181"
+    networks:
+      - notes_network
+
+  kafka:
+    image: confluentinc/cp-kafka:7.6.1
+    container_name: kafka
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    ports:
+      - "9092:9092"
+    networks:
+      - notes_network
+
   api:
     build:
       context: .
@@ -19,15 +45,29 @@ services:
     container_name: notes_api
     environment:
       ConnectionStrings__Default: "Server=sqlserver;Database=NotesDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
-    
       ASPNETCORE_URLS: "http://+:80"
-
+      Kafka__BootstrapServers: "kafka:9092"
     depends_on:
       - sqlserver
+      - kafka
     ports:
       - "5000:80"
     networks:
       - notes_network
+
+  kafka-consumer:
+    build:
+      context: .
+      dockerfile: Notes.Kafka/Dockerfile
+    container_name: notes_kafka_consumer
+    environment:
+      Kafka__BootstrapServers: "kafka:9092"
+    depends_on:
+      - kafka
+    networks:
+      - notes_network
+    volumes:
+      - ./Logs:/app/Logs
 
 networks:
   notes_network:
